fixed container alignment issue

--- a/css/index3.css
+++ b/css/index3.css
@@ -304,6 +304,7 @@ padding:0;
     flex-wrap: wrap;
     justify-content: center;
     /* overflow-y: scroll; */
+    overflow-y: auto;
 }
 .proj-box {
     margin: 0px 10px 100px 10px;
@@ -428,6 +429,16 @@ padding:0;
 
 #footerLinks li{
   list-style-type: none;
+  /* font-family: New, Courier;
+  font-weight: 400;
+
+  color: #000000;
+  display: block;
+  line-height: 3em;
+  padding: 20px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 700; */
 }
 
 /* .footer {
@@ -444,7 +455,9 @@ padding:0;
 .footer span {
     display: inline-block;
 } */
-.footer-container {
+
+
+.footer {
     width: 95%;
     height: 110px;
     margin: auto;
@@ -452,31 +465,41 @@ padding:0;
     justify-content: space-between;
     align-items: center;
 
-    /* position: relative;
-  bottom: 0;
-  left: 0;
-  width: 100%; */
   position: relative;
- width: 600px;
- height: 200px;
- /* left: 50%; */
- /* top: 0%; */
- /* margin-left: -300px; */
+ width: 700px;
+ height: 200px; */
+/* min-height: calc(100vh - 120px); */
+ /* flex-wrap: wrap; */
+/* overflow-x: hidden;
 
+/* text-align: center;
+   margin-bottom: 50px; */
+   /* min-height: calc(100vh - 120px);
+display:inline-block; */
 }
+/* .footer span {
+    display: inline-block;
+} */
+/* #intro-footer{
 
-/* .footer-container {
+  display:inline-block;
+  text-align: center;
+     margin-bottom: 50px;
+     min-height: calc(100vh - 120px);
+   } */
+
+ /* .footer-container {
     width: 95%;
     height: 110px;
     margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
-.footer-copyright {
+/* .footer-copyright {
     margin-top: 3em;
-}
+} */
 
 
 
@@ -510,7 +533,6 @@ padding:0;
 }
 
 nav {
-    /* background-color: #439DD5; */
     background-color: #1487B1;
     padding: 2% 12%;
 }
@@ -524,9 +546,6 @@ nav ul li {
     list-style-type: none;
 }
 nav ul li a {
-    /* color: #0A77E3; */
-    /* color: #626669; */
-    /* color: #0C536C; */
     color: #000000;
     display: block;
     line-height: 3em;
@@ -535,11 +554,10 @@ nav ul li a {
     font-size: 20px;
     font-weight: 700;
 }
-nav ul li:first-child {
+/* nav ul li:first-child {
     margin-right: auto;
-}
+} */
 nav ul li a:hover {
-    /* color: #707070; */
     color: #000000;
     transition: 0.5s;
 }
@@ -576,3 +594,94 @@ nav ul li a:hover {
     color: #707070;
     transition: 0.5s;
 } */
+
+
+
+
+
+
+
+
+@media screen and (max-width: 800px) {
+    .about-text {
+        font-size: 22px;
+        width: 75%;
+    }
+}
+@media screen and (max-width: 665px) {
+    body {
+        overflow-x: hidden;
+    }
+    nav {
+        padding: 5%;
+    }
+    nav ul li a {
+        font-size: 14px;
+        padding: 0 10px;
+    }
+    .logo {
+        width: 40px;
+    }
+    .header-title {
+        font-size: 60px;
+    }
+    .header-text {
+        font-size: 22px;
+        line-height: 32px;
+    }
+    .proj-wrapper {
+        width: 100%;
+    }
+    .proj-box {
+        width: 330px;
+        margin: 0 5px;
+    }
+    .proj-image {
+        width: 330px;
+        height: 220px;
+    }
+    .proj-title {
+        font-size: 22px;
+    }
+    .proj-body {
+        font-size: 16px;
+    }
+    .proj-box {
+        margin: 0 auto 50px auto;
+    }
+    .proj-label {
+        font-size: 10px;
+        margin: 20px 5px 0px 0px;
+        padding: 3px 5px;
+        border-radius: 10px;
+    }
+    .about-col {
+        width: 330px;
+        height: auto;
+        overflow: hidden;
+    }
+    .about-text h1 {
+        font-size: 30px;
+    }
+}
+
+@media only screen and (max-width: 325px) {
+    html {
+        overflow-x: hidden;
+    }
+    nav ul li a {
+        font-size: 12px;
+        padding: 0 8px;
+    }
+    .proj-image {
+        width: 300px;
+        height: 200px;
+    }
+    .proj-box {
+        width: 300px;
+        margin: 0 auto 50px auto;
+    }
+    .proj-label {
+        font-size: 8px;
+    }
+}
